# concordium-verifier

./: .gitignore  Cargo.toml
config/: statement.json  statement_age.json  statement_attribute.json
src/: handlers.rs  main.rs  types.rs
